--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -1,7 +1,10 @@
-<ul>
-  {{ range .Data.Pages }}
-  <li>
-    <a href="{{.RelPermalink}}">{{ .Title }}</a>
-  </li>
-  {{ end }}
-</ul>
+<div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
+  <p class="f5 b mb3">Pages with tag</p>
+  <ul class="pa0 list">
+    {{ range .Data.Pages }}
+    <li class="mb2">
+      <a href="{{.RelPermalink}}">{{ .Title }}</a>
+    </li>
+    {{ end }}
+  </ul>
+</div>
